@@ -36,6 +36,7 @@ toolbox
  - New function get_url to retrieve data from a URL
  - Change update to retrieve OMNI2 data from SPDF not ViRBO
  - Change update to supplement ViRBO Qin-Denton files with NMC daily files
+ - Change update to get leapseconds from NASA MODIS instead of USNO
 
 Changes in Version 0.2.1 (2019-10-02)
 =====================================
